TG-19: fix stream toList()